<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="com.example.ibrah.usersignupsystem.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_email_err"
            android:text="@string/error"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/login_email"
            android:text=""
            android:textSize="16sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_password_err"
            android:text="@string/error"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/login_password"
            android:text=""
            android:textSize="16sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_error"
        android:text=""
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:id="@+id/login_bt_cancel"
            android:text="@string/cancel"
            android:onClick="login_cancel_onclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:id="@+id/login_login"
            android:text="@string/login"
            android:onClick="login_login_onclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:padding="10dp"
        android:id="@+id/login_register"
        android:onClick="login_sign_onclick"
        android:text="@string/register"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
