<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="com.example.ibrah.usersignupsystem.Views.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reg_userName_err"
                android:text="@string/error"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/reg_userName"
                android:text=""
                android:textSize="16sp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reg_email_err"
                android:text="@string/error"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/reg_email"
                android:text=""
                android:textSize="16sp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reg_password_err"
                android:text="@string/error"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/reg_password"
                android:text=""
                android:textSize="16sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reg_passwordConfirm_err"
                android:text="@string/error"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/reg_passwordConfirm"
                android:text=""
                android:textSize="16sp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/reg_error"
            android:text=""
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_weight="1"
                android:id="@+id/reg_bt_cancel"
                android:text="@string/cancel"
                android:onClick="reg_cancel_onclick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="1"
                android:id="@+id/reg_bt_register"
                android:text="@string/Sign_up"
                android:onClick="reg_register_onclick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
